<resources>
    <string name="app_name">MobileWallet</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="registration_invalid_email">Invalid Email.</string>
    <string name="registration_inavalid_password">Invalid Password.</string>
    <string name="registration_invalid_user_name">Please Enter Username.</string>
    <string name="registration_empty_password">Please Enter Password.</string>
    <string name="click_back_agiain_to_exit">Please click BACK again to exit</string>
    <string name="title_loading">Loading…</string>
    <string name="title_processing">Processing…</string>
    <string name="no_internet">No network connection enabled.</string>
    <string name="load_offers_msg">load</string>
    <string name="please_wait">Please wait</string>
    <string name="facebook_app_id">288571111343597</string>
    <string name="recharge_tab">showRechargeTab</string>
    <string name="show_true">true</string>
    <string name="end">end</string>
    <string name="count">count</string>
    <string name="Y">Y</string>
    <string name="N">N</string>
    <string name="daily_credits_screen_name">Daily Credits</string>
    <string name="daily_credits_success_screen_name">Daily Credits Success</string>
    <string name="forgot_pwd_screen_name">Forgot Password</string>
    <string name="my_profile_screen_name">My Profile</string>
    <string name="feedback_screen_name">Feedback</string>
    <string name="wallet_history_screen_name">Wallet History</string>
    <string name="recharge_history_screen_name">Recharge History</string>
    <string name="recharge_screen_name">Recharge</string>
    <string name="recharge_confirmation_screen_name">Recharge Confirmation</string>
    <string name="recharge_success_screen_name">Recharge Success</string>
    <string name="notifications_screen_name">Notifications</string>
    <string name="invite_screen_name">Invite</string>
    <string name="user_questions_screen_name">User Questions</string>
    <string name="question_screen_name">Question</string>
    <string name="submit_question_screen_name">Submit Question</string>
    <string name="Helvetica">fonts/HelveticaNeueLTStd-Lt_0.otf</string>
    <string name="arial">fonts/arial.otf</string>
    <string name="Bebas">fonts/BEBAS.otf</string>
    <string name="GothamRnd">fonts/GothamRnd.otf</string>
    <string name="DroidSerif">fonts/DroidSerif-Italic.otf</string>
    <string name="main_heading">Mobile Wallet</string>
    <string name="register_button_name">Register</string>
    <string name="login_button_name">Login</string>
    <string name="title_activity_login">Login</string>
    <string name="dont_have_an_account_button_name">"Don't have an account? Register"</string>
    <string name="forgot_pwd">Forgot Password?</string>
    <string name="login_with_fb_button_name">Login With Facebook</string>
    <string name="mobile_error">Enter your mobile number.</string>
    <string name="invalid_mobile">Invalid mobile number.</string>
    <string name="pwd_error">Enter your password.</string>
    <string name="invalid_email">Invalid email.</string>
    <string name="invalid_pwd">Invalid password. Min 8 and max 20 characters and no spaces in between password.</string>
    <string name="fullname_error">Enter your fullname.</string>
    <string name="session_status">Session state changed.</string>
    <string name="failed_to_get_details">Failed to get details from facebook.</string>
    <string name="title_activity_register">Registration</string>
    <string name="email_edittext_hint">Email</string>
    <string name="mobile_edittext_hint">Mobile</string>
    <string name="fullname_edittext_hint">Full Name</string>
    <string name="pwd_edittext_hint">Password</string>
    <string name="reg_failed">Registration failed.</string>
    <string name="rt_pwd_edittext_hint">Retype Password</string>
    <string name="create_account_button_name">Create Account</string>
    <string name="already_have_an_account_button_name">Already have an account? Login</string>
    <string name="registration_des">Email address will be used for identification purpose and to prevent misuse of the service. To use Mobile Wallet, please verify your email address.</string>
    <string name="signup_with_fb_button_name">Signup With Facebook</string>
    <string name="title_activity_tabs">Mobile Wallet</string>
    <string name="register_with_facebook">Register with Facebook</string>
    <string name="title_activity_learn_gk_fragment">LearnGk</string>
    <string name="title_activity_invite_fragment">Invite</string>
    <string name="refer_earn">Refer &amp; Earn</string>
    <string name="invite_and_earn">Get Rs 5 when you refer any new friend to Mobile Wallet.</string>
    <string name="how_it_works">HOW IT WORKS</string>
    <string name="refer_instructions">"1. Share your unique link to your friends\n2. When your friends click on the link, install and sign up, you get your referral\n\nNote: Your friend must bea new user of Mobile Wallet"</string>
    <string name="referral_link_des">YOUR UNIQUE REFERRAL LINK</string>
    <string name="referral_link">http://mobilewalletapp.in/HJD76DF9S</string>
    <string name="title_activity_more_fragment">More</string>
    <string name="wallet">Wallet</string>
    <string name="about">About</string>
    <string name="profile">Profile</string>
    <string name="daily_credits">Daily Credits</string>
    <string name="daily_credits_des"><![CDATA[Everyday, you get <font color=\"#6ebb3b\">7 paise</font> for opening<br/>or logging into the app.]]></string>
    <string name="cliam_button_name">Claim Today\'s 7 paise</string>
    <string name="already_climed">Already Claimed</string>
    <string name="enable_notifications">Daily Credits</string>
    <string name="notifications_des">Real time notifications for offers and credits are not often and they will help you get free recharge quickly Hence, customization option is not given for them.</string>
    <string name="notifications">Notifications</string>
    <string name="notifc_failure_msg">Unable to update notification settings.</string>
    <string name="offer">offer</string>
    <string name="rate">Rate</string>
    <string name="share">Share</string>
    <string name="feedback">Feedback</string>
    <string name="invite">Invite</string>
    <string name="recharge">Recharge</string>
    <string name="learnGK">Learn G.K</string>
    <string name="change_mobile_number">Change Mobile Number</string>
    <string name="title_activity_recharge_fragment">Recharge</string>
    <string name="wallet_money">Wallet money</string>
    <string name="min_recharge_amt">Minimum recharge amount is 20</string>
    <string name="self">Self</string>
    <string name="others">Others</string>
    <string name="enter_details">Enter details to recharge</string>
    <string name="moile_no_hint">Enter your mobile number</string>
    <string name="operator_circle_hint">Operator and circle</string>
    <string name="amount">Amount</string>
    <string name="country_code">+91-</string>
    <string name="title_activity_forgot_password">Forgot Your Password?</string>
    <string name="forgot_password_des">"To reser your password, please enter your registered email address. An email will be sent to that email address."</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="email_error">Inavalid email.</string>
    <string name="forgot_pwd_fail">Invalid email address, check you email address.</string>
    <string name="forgot_pwd_success_msg">Password sent successfully to your email address.</string>
    <string name="prompt_feedback">Select</string>
    <string name="feedback_edittext_hint">Write your feedback here.</string>
    <string name="feedback_button_text">SEND</string>
    <string name="feedback_heading">We would love to here from you</string>
    <string name="title_activity_feedback">Feedback</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_balance">Balance</string>
    <string name="current_bal">Current balance</string>
    <string name="wallet_history">Wallet History</string>
    <string name="wallet_hstry">WALLET HISTORY</string>
    <string name="w_r_date">DATE</string>
    <string name="w_r_coins">AMOUNT</string>
    <string name="recharge_history">Recharge History</string>
    <string name="recharge_hstry">RECHARGE HISTORY</string>
    <string name="current_balance">Balance Amount</string>
    <string name="credit_history_msg">Total Credited Amount</string>
    <string name="debit_history_msg">Total Debited Amount</string>
    <string name="bal_heading">Your Wallet Balance :</string>
    <string name="title_activity_credit_history">Credit History</string>
    <string name="title_activity_debit_history">Debit History</string>
    <string name="title_activity_splash_screen">Splash Screen</string>
    <string name="title_activity_daily_credits">Daily Credits</string>
    <string name="title_activity_notifications">Notifications</string>
    <string name="colon">:</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="date_of_birth">Date of birth </string>
    <string name="gender">Gender</string>
    <string name="ocupation">Ocupation</string>
    <string name="income">Income</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="not_mentioned">Not Mentioned</string>
    <string name="title_activity_my_profile">MyProfile</string>
    <string name="title_activity_wallet_histoy">Wallet Histoy</string>
    <string name="title_activity_recharge_history">Recharge History</string>
    <string name="has_been_credited">has been credited.</string>
    <string name="view_offers">View Offers</string>
    <string name="view_credit_history">View Balance</string>
    <string name="title_activity_daily_credits_success">Daily Credits Success</string>
    <string name="update">UPDATE PROFILE</string>
    <string name="mobile_no">Mobile number</string>
    <string name="dob">Date of birth</string>
    <string name="prompt_gender">Select Gender</string>
    <string name="prompt_ocupation">Select Ocupation</string>
    <string name="prompt_income">Select Income</string>
    <string name="title_activity_edit_profile">Edit Profile</string>
    <string name="title_activity_change_mobile_number">Change Mobile Number</string>
    <string name="change_mb_heading">CHANGE MOBILE MUBMER</string>
    <string name="new_mobile_no">New Mobile No</string>
    <string name="change_mb_button_name">CHANGE</string>
    <string name="title_activity_cmn_verification">Mobile Verification</string>
    <string name="verify_mobile_no_edittext_hint">Verification Code</string>
    <string name="verify_mobile_des">Please enter your correct mobile number, Verification code will be sent to this number.</string>
    <string name="verify_mobile_no_button_name">VERIFY</string>
    <string name="verify_mobile_no_heading">VERIFY MOBILE NUMBER</string>
    <string name="resend_verification_code">Receive verification code again</string>
    <string name="colon_operator">:</string>
    <string name="rchg_conformation_heading">Please Confirm The Details</string>
    <string name="rchg_conformation_mob_operator">Mobile Operator</string>
    <string name="rchg_conformation_mob_no">Mobile Number</string>
    <string name="confirm">CONFIRM</string>
    <string name="edit">EDIT</string>
    <string name="earn_rewards">Earn Rewards to submit a question?</string>
    <string name="enter_ques_hint">Enter a question?</string>
    <string name="submit">Submit</string>
    <string name="a">A)</string>
    <string name="b">B)</string>
    <string name="c">C)</string>
    <string name="d">D)</string>
    <string name="your_answer">Your Answer :</string>
</resources>