<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <EditText
        android:id="@+id/email"
        style="@style/register_edittext_text_style"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5.0dip"
        android:ems="10"
        android:hint="@string/email_edittext_hint"
        android:inputType="textEmailAddress" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/pwd"
        style="@style/register_edittext_text_style"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/email"
        android:layout_below="@+id/fullname"
        android:layout_marginTop="10.0dip"
        android:ems="10"
        android:hint="@string/pwd_edittext_hint"
        android:inputType="numberPassword" />

    <EditText
        android:id="@+id/rtPwd"
        style="@style/register_edittext_text_style"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/email"
        android:layout_below="@+id/pwd"
        android:layout_marginTop="10.0dip"
        android:ems="10"
        android:hint="@string/rt_pwd_edittext_hint"
        android:inputType="numberPassword" />

    <EditText
        android:id="@+id/fullname"
        style="@style/register_edittext_text_style"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10.0dip"
        android:ems="10"
        android:hint="@string/fullname_edittext_hint" />

    <Button
        android:id="@+id/button1"
        style="@style/register_button_style"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rtPwd"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20.0dip"
        android:text="@string/create_account_button_name" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button1"
        android:layout_below="@+id/button3"
        android:layout_marginTop="10.0dip"
        android:text="@string/registration_des" />

    <Button
        android:id="@+id/button3"
        style="@style/signup_with_fb_button_style"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5.0dip"
        android:text="@string/signup_with_fb_button_name" />

</RelativeLayout>