<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    android:scrollbars="none" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/edit_profile_layout_padding"
        tools:context="com.freeplus.EditProfile" >

        <EditText
            android:id="@+id/name_editText1"
            style="@style/edit_profile_edittext_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/edit_profile_mb_no_margin_top"
            android:ems="10"
            android:hint="@string/name"
            android:paddingLeft="@dimen/edit_profile_edittext_padding_left" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/dob_editText2"
            style="@style/edit_profile_edittext_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/edit_profile_dob_margin_top"
            android:clickable="true"
            android:ems="10"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/dob"
            android:inputType="date"
            android:paddingLeft="@dimen/edit_profile_edittext_padding_left" />

        <Spinner
            android:id="@+id/gender_spinner1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/edit_profile_spinner_margin_top"
            android:prompt="@string/prompt_gender"
            android:spinnerMode="dialog" />

        <Spinner
            android:id="@+id/occupation_spinner2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/edit_profile_spinner_margin_top"
            android:prompt="@string/prompt_ocupation"
            android:spinnerMode="dialog" />

        <Spinner
            android:id="@+id/income_spinner3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/edit_profile_spinner_margin_top"
            android:prompt="@string/prompt_income"
            android:spinnerMode="dialog" />

        <Button
            android:id="@+id/update_button1"
            style="@style/edit_profile_button_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/edit_profile_button_margin_top"
            android:text="@string/update" />
    </LinearLayout>

</ScrollView>