<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mobilewallet.earnrewards.EarnRewards" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/earn_rewards"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/question"
        style="@style/earn_rewards_edittext_style"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:gravity="start"
        android:hint="@string/enter_ques_hint"
        android:inputType="textPostalAddress" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/answerA"
        style="@style/earn_rewards_edittext_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/question"
        android:layout_alignRight="@+id/question"
        android:layout_below="@+id/question"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/a"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/answerB"
        style="@style/earn_rewards_edittext_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/answerA"
        android:layout_alignRight="@+id/answerA"
        android:layout_below="@+id/answerA"
        android:layout_centerVertical="true"
        android:layout_marginTop="6dp"
        android:ems="10"
        android:hint="@string/b"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/answerC"
        style="@style/earn_rewards_edittext_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/answerB"
        android:layout_alignRight="@+id/answerB"
        android:layout_below="@+id/answerB"
        android:layout_marginTop="6dp"
        android:ems="10"
        android:hint="@string/c"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/answerD"
        style="@style/earn_rewards_edittext_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/answerC"
        android:layout_alignRight="@+id/answerC"
        android:layout_below="@+id/answerC"
        android:layout_marginTop="6dp"
        android:ems="10"
        android:hint="@string/d"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/answer"
        style="@style/earn_rewards_answer_edittext_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/answerD"
        android:layout_below="@+id/answerD"
        android:layout_marginTop="15dp"
        android:ems="10" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/answer"
        android:layout_alignBottom="@+id/answer"
        android:layout_alignLeft="@+id/answerD"
        android:text="@string/your_answer"
        android:textSize="14sp" />

    <Button
        android:id="@+id/submit"
        style="@style/earn_rewards_button_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignRight="@+id/answer"
        android:layout_below="@+id/answer"
        android:layout_marginTop="15dp"
        android:text="@string/submit" />

</RelativeLayout>