<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/white" android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:id="@id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/forgot_password_des" android:lineSpacingExtra="3.0dip" style="@style/forgot_pwd_text_style" />
    <EditText android:id="@id/email_address" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="27.0dip" android:hint="@string/email_edittext_hint" android:ems="10" android:layout_below="@id/textView1" android:layout_centerHorizontal="true" android:inputType="textEmailAddress">
        <requestFocus />
    </EditText>
    <View android:id="@id/fakeView" android:layout_width="0.0dip" android:layout_height="0.0dip" android:layout_centerInParent="true" />
    <Button android:id="@id/ok" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/ok" android:layout_below="@id/email_address" android:layout_alignLeft="@id/email_address" android:layout_alignRight="@id/fakeView" />
    <Button android:id="@id/cancel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/cancel" android:layout_alignBaseline="@id/ok" android:layout_alignLeft="@id/fakeView" android:layout_alignRight="@id/email_address" android:layout_alignBottom="@id/ok" />
</RelativeLayout>